[package]
name = "rust_reconciler"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_reconciler"
crate-type = ["cdylib"]  # Compile to a C-compatible dynamic library (.pyd/.so)

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.1.0", features = ["serde"] } # A hash map that preserves insertion order
lis = "0.1.1" # <-- ADD THIS LINE
