[package]
name = "rust_reconciler"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_reconciler"
crate-type = ["cdylib"]  # Compile to a C-compatible dynamic library (.pyd/.so)

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.2", features = ["serde"] } # A hash map that preserves insertion order
lis = "0.1.1" # <-- ADD THIS LINE
uuid = { version = "1.8", features = ["v4"] }
thiserror = "1.0"
log = "0.4"
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true